# fundamental_algorithms_mai

./: README.md
p1_l1/: CMakeLists.txt  main.c
p1_l1/include/: functions.h
p1_l1/src/: flags.c  functions.c
p1_l2/: CMakeLists.txt  main.c
p1_l2/include/: functions.h
p1_l2/src/: functions.c
p1_l3/: CMakeLists.txt  main.c
p1_l3/include/: functions.h
p1_l3/src/: flags.c  functions.c
p1_l4/: CMakeLists.txt  main.c
p1_l4/include/: functions.h
p1_l4/src/: functions.c
p1_l6/: main.c
p1_l6/include/: functions.h
p1_l6/src/: functions.c
p2_l1/: CMakeLists.txt
p2_l1/src/: functions.c
p2_l2/: main.c
p2_l2/include/: functions.h
str_int/: CMakeLists.txt  str_int.c
str_int/include/: func.h
str_int/src/: func.c
